--- a/Notes/ReleaseNotes.txt
+++ b/Notes/ReleaseNotes.txt
@@ -1,1 +1,8 @@
-- Fixes Play Mode failing to rename certain files. NOTE: You might need to reset your current play mode. Simply open the WBT app from the Space Center, choose another mode, press OK, and again open the app, selecting your original play mode. Then be sure to restart KSP.
+Omni Converters & Storage
+- Added search functions to OmniStorage and OmniConverter GUI.
+- Play Mode now lists which mods support a particular mode.
+
+Classic Stock
+- Added new Classic Stock omni converters: Propellium Distiller, Oxium Distiller, Snack Grinder (requres Snacks), Soil Dehydrator (requires Snacks).
+- Changed the default template to OmniShop and OmniWorks for the Casa/Ponderosa and Hacienda, respectively.
+- The Mule's default template is now OmniStorage.
